--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./styles/style.css" />
   <link rel="stylesheet" href="./styles/animations.css" />
   <link rel="icon" href="./images/favicon.svg" type="images/svg+hml"><!--Мой код-->
+  <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
 </head>
 
 <body class="page">
@@ -41,7 +42,7 @@
         </div>
         <div class="card__container-button">
           <button class="card__icon-button" type="button">
-            <svg class="like-icon is-liked" width="39" height="36" viewBox="0 0 39 36" fill="none"
+            <svg class="like-icon is-liked" width="39" height="34" viewBox="0 0 39 36" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour"
@@ -61,7 +62,7 @@
                 fill="var(--sparks-color)" />
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -89,7 +90,7 @@
         </div>
         <div class="card__container-button">
           <button class=" card__icon-button  z" type="button">
-            <svg class="like-icon is-liked" width="39" height="36" viewBox="0 0 39 36" fill="none"
+            <svg class="like-icon is-liked" width="39" height="34" viewBox="0 0 39 36" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <g class="heart">
                 <path class="contour"
@@ -109,7 +110,7 @@
                 fill="var(--sparks-color)" />
             </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -134,7 +135,7 @@
           </div>
           <div class="card__container-button">
             <button class="card__icon-button" type="button">
-              <svg class="like-icon is-liked" width="39" height="36" viewBox="0 0 39 36" fill="none"
+              <svg class="like-icon is-liked" width="39" height="34" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
                   <path class="contour"
@@ -154,7 +155,7 @@
                   fill="var(--sparks-color)" />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -181,7 +182,7 @@
           </div>
           <div class="card__container-button">
             <button class="card__icon-button" type="button">
-              <svg class="like-icon is-liked" width="39" height="36" viewBox="0 0 39 36" fill="none"
+              <svg class="like-icon is-liked" width="39" height="34" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
                   <path class="contour"
@@ -201,7 +202,7 @@
                   fill="var(--sparks-color)" />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -228,7 +229,7 @@
           </div>
           <div class="card__container-button">
             <button class="card__icon-button" type="button">
-              <svg class="like-icon is-liked" width="39" height="36" viewBox="0 0 39 36" fill="none"
+              <svg class="like-icon is-liked" width="39" height="34" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
                   <path class="contour"
@@ -248,7 +249,7 @@
                   fill="var(--sparks-color)" />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -273,7 +274,7 @@
           </div>
           <div class="card__container-button">
             <button class="card__icon-button" type="button">
-              <svg class="like-icon is-liked" width="39" height="36" viewBox="0 0 39 36" fill="none"
+              <svg class="like-icon is-liked" width="39" height="34" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
                   <path class="contour"
@@ -293,7 +294,7 @@
                   fill="var(--sparks-color)" />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -320,7 +321,7 @@
           </div>
           <div class="card__container-button">
             <button class="card__icon-button" type="button">
-              <svg class="like-icon is-liked" width="39" height="36" viewBox="0 0 39 36" fill="none"
+              <svg class="like-icon is-liked" width="39" height="34" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
                   <path class="contour"
@@ -340,7 +341,7 @@
                   fill="var(--sparks-color)" />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -369,7 +370,7 @@
           </div>
           <div class="card__container-button">
             <button class="card__icon-button" type="button">
-              <svg class="like-icon is-liked" width="39" height="36" viewBox="0 0 39 36" fill="none"
+              <svg class="like-icon is-liked" width="39" height="34" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
                   <path class="contour"
@@ -389,7 +390,7 @@
                   fill="var(--sparks-color)" />
               </svg>
             </button>
-            <button class="card__like-button">
+            <button class="card__like-button button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -397,13 +398,13 @@
       </div>
     </section>
 
-    <section class="dialog">
-      <button class="dialog__container-button" type="button" onclick="window['dialog-id'].showModal();"
+    <div class="dialog">
+      <button class="dialog__container-button button" type="button" onclick="window['dialog-id'].showModal();"
         aria-controls="dialog-id">
         <svg class="floppy" viewBox="0 0 21 21" fill="currentColor">
           <use href="svg/icon.svg#floppy-disk" />
         </svg>
-        <span class="dialog__button-text">Сохранить на память</span>
+        <span class="button__text">Сохранить на память</span>
       </button>
       <dialog id="dialog-id" class="dialog__content">
         <div class="dialog__container">
@@ -416,10 +417,12 @@
           </div>
         </div>
         <form method="dialog">
-          <button class="dialog__form-button">ок</button>
+          <button class="dialog__form-button button">
+            <span class="button__text">ок</span>
+          </button>
         </form>
       </dialog>
-    </section>
+    </div>
   </main>
 
   <script src="./scripts/like.js"></script>
